# nameblock

./: .gitignore  Makefile  configure.ac  readme.md
doc/: fullblocking.gnu  readme.md
doc/data/: hist_lastname_firstname.txt
include/: comparators.h  location.h  record.h  timer.h
src/: .gitignore  Makefile.am  comparators.cpp  hist_lastname.txt  hist_lastname_firstinitial.txt  objects.cpp  recordloader.cpp  records.cpp  timer.cpp
test/: .gitignore  Makefile.am  similarities  test_comparators.cpp  test_location.cpp  test_objects.cpp  test_record.cpp  test_similarity.cpp  testall.sh  testutils.h
test/fixtures/: ten_records_1973.csv
